--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
     <!-- head -->
@@ -99,7 +99,7 @@
             <div class="social_item_icon"> 
                 <i class="fa fa-3x fa-globe"></i>
             </div> 
-            <b class="social_item_title">My personal web projects</b> 
+            <b class="social_item_title">My personal web projects (changed)</b> 
             <ul style="clear:both; margin: 0">
 
                 <li class="social_item_info">
