--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>Тестируем PHP</title>
  </head>
  <body>
- <?php echo '<p>Привет, мир!</p>'; ?>
+ <?php echo $_POST['username']; ?>
  </body>
 </html>
