--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>Тестируем PHP</title>
  </head>
  <body>
- <?php echo $_POST['username']; ?>
+ <?php echo $_POST['4ac6eb71']; ?>
  </body>
 </html>
